--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class = 'col-sm-12'>
-          <div class = 'main_image'>
+          <div class = 'main_image' id = 'test'>
           </div>
-        </div>
-        <div class = "row">
+      </div>
+      <div class = 'row' id = 'songs'>
           
-        </div>
       </div>
     </div>
+    <footer class="player">
+      <div class="container">
+        <div class = 'row'>
+            <h3 style = 'color:white;'></h3>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
