backwards to go forwards

--- a/index.html
+++ b/index.html
@@ -9,22 +9,28 @@
     <link rel="stylesheet" type="text/css" href="css/sass/main.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300,700,400' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript" src = 'js/feedObj.js'></script>
     <script type="text/javascript" src = 'js/fetchPodcasts.js'></script>
   </head>
   <body>
     <div class="container">
       <div class="row">
-          <div class = 'main_image' id = 'test'>
+          <div class = 'col-sm-3'>
+            a
           </div>
+          <div class = 'col-sm-6'>
+            Lorem ipsum Nostrud mollit ut velit Duis exercitation voluptate aliquip minim nisi in proident esse officia laboris non eu est dolor voluptate qui officia eu.
+          </div>
+          <div class = 'col-sm-3'>
+            b</div>
       </div>
       <div class = 'row' id = 'songs'>
-          
       </div>
     </div>
     <footer class="player">
       <div class="container">
         <div class = 'row'>
-            <h3 style = 'color:white;'></h3>
+            <div class = 'col-sm-12'> This album is a farse, The song is called david.</div>
         </div>
       </div>
     </footer>
