some design framework

--- a/index.html
+++ b/index.html
@@ -13,24 +13,35 @@
     <script type="text/javascript" src = 'js/fetchPodcasts.js'></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-          <div class = 'col-sm-3'>
-            a
+          <div class = 'col-sm-2'>
           </div>
-          <div class = 'col-sm-6'>
-            Lorem ipsum Nostrud mollit ut velit Duis exercitation voluptate aliquip minim nisi in proident esse officia laboris non eu est dolor voluptate qui officia eu.
+          <div class = 'col-sm-8' id = 'coverArt'>
           </div>
-          <div class = 'col-sm-3'>
-            b</div>
+          <div class = 'col-sm-2'>
+          </div>
       </div>
-      <div class = 'row' id = 'songs'>
+
+      <div class = 'row'>
+        <div class="col-sm-3">
+        </div>
+        <div class="col-sm-6">
+        <div id = 'description' style = 'width:95%; margin:10px auto;margin-top:-25px;padding:10px;'>
+        </div>
+        </div>
+        <div class="col-sm-3">
+        </div>
+      </div>
+            <div class = 'row'>
+        <div class = 'col-md-12' style = 'height:800px;'>
+        </div>
       </div>
     </div>
     <footer class="player">
       <div class="container">
         <div class = 'row'>
-            <div class = 'col-sm-12'> This album is a farse, The song is called david.</div>
+            <div class = 'col-sm-12'> player</div>
         </div>
       </div>
     </footer>
