--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src = 'js/feedObj.js'></script>
     <script type="text/javascript" src = 'js/fetchPodcasts.js'></script>
   </head>
-  <body>
+  <body onLoad="setTimeout(function() {window.scrollTo(0, 1)}, 100);">
     <div class="container-fluid">
       <div class="row">
           <div class = 'col-sm-2'>
