--- a/index.html
+++ b/index.html
@@ -14,34 +14,36 @@
   </head>
   <body onLoad="setTimeout(function() {window.scrollTo(0, 1)}, 100);">
     <div class="container-fluid">
-      <div class="row">
-          <div class = 'col-sm-2'>
+      <div class="row" id = 'row1'>
+          <div class = 'col-md-2'>
           </div>
-          <div class = 'col-sm-8' id = 'coverArt'>
+          <div class = 'col-md-8' id = 'coverArt'>
           </div>
-          <div class = 'col-sm-2'>
+          <div class = 'col-md-2'>
           </div>
       </div>
 
       <div class = 'row'>
-        <div class="col-sm-3">
+        <div class="col-md-3">
         </div>
-        <div class="col-sm-6">
-        <div id = 'description' style = 'width:95%; margin:10px auto;margin-top:-25px;padding:10px;'>
+        <div class="col-md-6">
+        <div id = 'description' style = 'width:96%; margin:10px auto;margin-top:-25px;padding:10px;'>
         </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-md-3">
         </div>
-      </div>
-            <div class = 'row'>
-        <div class = 'col-md-12' style = 'height:800px;'>
+        </div>
+        <div class = 'row'>
+        <div class = 'col-md-12'>
+        <ol id = 'songs'>
+        </ol>
         </div>
       </div>
     </div>
     <footer class="player">
       <div class="container">
         <div class = 'row'>
-            <div class = 'col-sm-12'> player</div>
+            <div class = 'col-sm-12' id = 'player'> player</div>
         </div>
       </div>
     </footer>
