--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <footer class="player">
       <div class="container">
         <div class = 'row'>
-            <div class = 'col-sm-12' id = 'player'> player</div>
+            <div class = 'col-sm-12' id = 'player'></div>
         </div>
       </div>
     </footer>
