--- a/index.html
+++ b/index.html
@@ -8,43 +8,26 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/sass/main.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300,700,400' rel='stylesheet' type='text/css'>
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script type="text/javascript" src = 'js/feedObj.js'></script>
-    <script type="text/javascript" src = 'js/fetchPodcasts.js'></script>
+    <script type="text/javascript" src="js/generateListPage.js"></script>
+    <style>
+    li
+    {
+      font-size: 2em;
+      text-align: center;
+    }
+</style>
   </head>
-  <body onLoad="setTimeout(function() {window.scrollTo(0, 1)}, 100);">
+  <body >
     <div class="container-fluid">
       <div class="row" id = 'row1'>
           <div class = 'col-md-2'>
           </div>
-          <div class = 'col-md-8' id = 'coverArt'>
+          <div class = 'col-md-8'>
+          <ol id = 'podcasts'>
+          </ol>
           </div>
           <div class = 'col-md-2'>
           </div>
-      </div>
-
-      <div class = 'row'>
-        <div class="col-md-3">
-        </div>
-        <div class="col-md-6">
-        <div id = 'description' style = 'width:96%; margin:10px auto;margin-top:-25px;padding:10px;'>
-        </div>
-        </div>
-        <div class="col-md-3">
-        </div>
-        </div>
-        <div class = 'row'>
-        <div class = 'col-md-12'>
-        <ol id = 'songs'>
-        </ol>
-        </div>
-      </div>
-    </div>
-    <footer class="player">
-      <div class="container">
-        <div class = 'row'>
-            <div class = 'col-sm-12' id = 'player'></div>
-        </div>
       </div>
     </footer>
   </body>
