--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="row">
         <div class = col-sm-2></div>
         <div class = col-sm-8>
-          <input type="text" name="rssLink" placeholder="Enter rss feed here then hit enter"  id = 'rssInput'> <br>
+          <input type="text" name="rssLink" placeholder="Enter search term here then hit enter"  id = 'rssInput'> <br>
         </div>
         <div class = col-sm-2></div>
         </div>
@@ -52,4 +52,9 @@
       </div>
     </footer>
   </body>
+
+  <script type="text/javascript">
+
+
+  </script>
 </html>
