--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="js/generateListPage.js"></script>
     <script type="text/javascript" src="js/gotorss.js"></script>
+     <script type="text/javascript" src="js/jsr_class.js"></script>
   </head>
   <body >
     <div class="container-fluid" id ='searchContainer'>
@@ -25,6 +26,7 @@
         <div class = col-sm-2></div>
         <div class = col-sm-8>
           <input type="text" name="rssLink" placeholder="Enter search term here then hit enter"  id = 'rssInput'> <br>
+
         </div>
         <div class = col-sm-2></div>
         </div>
