--- a/podcast.html
+++ b/podcast.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<!--mobie wireframe design https://wireframe.cc/0tgMIP -->
-<!--desktop wireframe design https://wireframe.cc/m4Usdy -->
 <html>
   <head>
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/sass/main.css">
+
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300,700,400' rel='stylesheet' type='text/css'>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript" src = 'js/feedObj.js'></script>
     <script type="text/javascript" src = 'js/fetchPodcasts.js'></script>
+    <script type="text/javascript" src = 'js/pause.js'></script>
+
+    
   </head>
   <body onLoad="setTimeout(function() {window.scrollTo(0, 1)}, 100);">
     <div class="container-fluid">
