--- a/newindex.html
+++ b/newindex.html
@@ -13,6 +13,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript" src="js/podcastObject.js"></script>
+    <script type="text/javascript" src="js/interactivity.js"></script>
 
   </head>
   <body >
