--- a/oldIndex.html
+++ b/oldIndex.html
@@ -12,8 +12,10 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script type="text/javascript" src="js/podcastObject.js"></script>
-    <script type="text/javascript" src="js/interactivity.js"></script>
+    <script type="text/javascript" src="js/feedObj.js"></script>
+    <script type="text/javascript" src="js/gotorss.js"></script>
+    <script type="text/javascript" src="js/jsr_class.js"></script>
+    <script type="text/javascript" src = 'js/fetchPodcasts.js'></script>
 
   </head>
   <body >
